# go1_repo_sim

./: .gitignore  README.md
catkin_ws/src/depends/point_cloud_io/: CMakeLists.txt
catkin_ws/src/elevation_mapping/elevation_mapping/: CMakeLists.txt  package.xml
catkin_ws/src/elevation_mapping/elevation_mapping_demos/: CMakeLists.txt
catkin_ws/src/elevation_mapping/elevation_msgs/: CMakeLists.txt
catkin_ws/src/gps_waypoint_nav/: CMakeLists.txt  package.xml
catkin_ws/src/gps_waypoint_nav/launch/include/: send_goals.launch
catkin_ws/src/gps_waypoint_nav/launch/navigation/: gps_waypoint_nav.launch
catkin_ws/src/gps_waypoint_nav/src/: collect_gps_waypoints.cpp  gps_waypoint.cpp  waypoint_nav.cpp
catkin_ws/src/gps_waypoint_nav/waypoint_files/: points_sim.txt
catkin_ws/src/ig_lio/: CMakeLists.txt  package.xml
catkin_ws/src/ig_lio/config/: Bpearl.yaml  velodyne_m1600.yaml
catkin_ws/src/ig_lio/launch/: lio_velodyne_Bpearl.launch  lio_velodyne_m1600.launch  noetic_main_elev.launch  noetic_main_mebt.launch  noetic_main_trav.launch
catkin_ws/src/ig_lio/rviz/: lio_show_mine.rviz
catkin_ws/src/ig_lio/src/: ig_lio_node.cpp  pointcloud_preprocess.cpp  scan2map.cpp
catkin_ws/src/metrics_extractor/: CMakeLists.txt  package.xml
catkin_ws/src/metrics_extractor/logfiles/: logfile_metrics-2025-01-23-15-45.csv  logfile_metrics-2025-01-24-15-03.csv  (+48 more)
catkin_ws/src/navigation_final_semfire_pilot/: package.xml
docker/: app_launcher_melodic.sh  app_launcher_noetic.sh  docker-compose.yml  melodic-launch.sh  melodic.Dockerfile  noetic-launch.sh  noetic.Dockerfile
(+354 files in other folders)
